--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,9 @@
           </div>
 
           <div class="msg-text">
-            Hi, welcome to VU admission ChatBot! 😄
+            Hi, welcome to VU ChatBot! 😄 <br>
+            Right now, I can only answer admission-related queries.
+            SORRY for any unexpected behavior!!!
           </div>
         </div>
       </div>
