--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
 
           <div class="msg-text">
             Hi, welcome to VU ChatBot! 😄 <br>
-            Right now, I can only answer admission-related queries.
+            Right now, I can only answer admission-related queries. <br>
             SORRY for any unexpected behavior!!!
           </div>
         </div>
