--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+iment<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -15,7 +15,7 @@
     <header class="msger-header">
       <div class="msger-header-title">
       <!--<i class="fas fa-bug"></i> VU Chatbot <i class="fas fa-bug"></i>-->  
-        <i class="fa-solid fa-building-columns"></i> Virtual University Of Pakistan (Chatbot under development!)<i class="fa-solid fa-building-columns"></i>
+        <i class="fa-solid fa-building-columns"></i> Virtual University Of Pakistan (Chatbot Experiment!)<i class="fa-solid fa-building-columns"></i>
       </div>
     </header>
 
@@ -29,9 +29,9 @@
           </div>
 
           <div class="msg-text">
-            Hi, welcome to VU ChatBot! 😄 <br>
-            Right now, I can only answer admission-related queries. <br>
-            SORRY for any unexpected behavior!!!
+            Hi, welcome to VU ChatBot! 😄
+            <br>I can only answer admission, results, and CS 201(Introduction to Computer Programming)-related queries.
+            <br>SORRY for any unexpected behavior!!
           </div>
         </div>
       </div>
