some words were typed by mistake on irrelevant place
Removed the words from the wrong place

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-iment<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -30,7 +30,8 @@ iment<!DOCTYPE html>
 
           <div class="msg-text">
             Hi, welcome to VU ChatBot! 😄
-            <br>I can only answer admission, results, and CS 201(Introduction to Computer Programming)-related queries.
+            <br>I can only answer admission, results, and <br>
+            CS 201(Introduction to Computer Programming)-related queries.
             <br>SORRY for any unexpected behavior!!
           </div>
         </div>
